--- a/index.html
+++ b/index.html
@@ -8,8 +8,6 @@
 
   <body>
     <div class="appElement"></div>
-    <script src="./main.js"></script>
+    <script type="module" src="./index.js"></script>
   </body>
-
-  <script type="module" src="./main.js"></script>
 </html>
