webpack installed, date library added

--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
 
   <body>
     <div class="appElement"></div>
-    <script type="module" src="./index.js"></script>
+    <script src="./dist/index.js"></script>
   </body>
 </html>
